# docstore

./: .gitignore  README.md  pyproject.toml
scripts/: test_db.py  watch_and_ingest.py
src/docstore_mcp/: __init__.py  server.py  watch_and_ingest.py
