[project]
name = "docstore-mcp"
version = "0.1.0"
description = "A small chromadb based document storage mcp server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "chromadb>=1.0.20",
 "mcp>=1.13.1",
]
[[project.authors]]
name = "Johannes Wiebe"
email = "johannes.wiebe@flexciton.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
docstore-mcp = "docstore_mcp:main"
