[project]
name = "docstore-mcp"
version = "0.1.0"
description = "A small chromadb based document storage mcp server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "chromadb>=1.0.20",
 "mcp>=1.13.1",
 "watchdog>=3.0.0",
 "langchain>=0.1.0",
 "langchain-text-splitters>=0.0.1",
 "pypdf>=4.0.0",
 "tiktoken>=0.5.0",
]
[[project.authors]]
name = "Johannes Wiebe"
email = "johannes.wiebe@flexciton.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
docstore-mcp = "docstore_mcp:main"
docstore-watch = "docstore_mcp.watch_and_ingest:main"
